# locus

./: .env.example  .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  gnomad.genomes.v4.1.sites.chr21.vcf.bgz.tbi  pyproject.toml  setup.command  setup.sh
docs/: SETUP.md  integration-notes.md
scripts/: build_macos_app.sh  locus-serve.command  locus_app.swift  make_app_icon.py  make_fixture.py
src/locus/: __init__.py  ancestry.py  annotate.py  api.py  artifacts.py  cli.py  clingen.py  config.py  db.py  download.py  gwas.py  ingest.py  literature.py  load.py  localancestry.py  manifest.py  mcp_install.py  mcp_server.py  panels.py  pgs.py  queries.py  refresh.py  report.py  schedule.py  setup.py  shell.py  traits.py  vcfutils.py
tests/: test_pipeline.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css
